--- a/MP-TVSeries/Resources/Languages/ca.xml
+++ b/MP-TVSeries/Resources/Languages/ca.xml
@@ -4,4 +4,8 @@
   <!--Additional ones should be added for other languages, dont translate existing ones as they will be used as well-->
   <!--Rate Descriptions - 5 Stars-->
   <!--Rate Descriptions - 10 Stars-->
+  <string name="Director" Original="Director">Director</string>
+  <string name="Rated" Original="Rated">Valorat</string>
+  <string name="Runtime" Original="Runtime">Durada</string>
+  <string name="Votes" Original="votes">vots</string>
 </resources>
