--- a/MP-TVSeries/Resources/Languages/de.xml
+++ b/MP-TVSeries/Resources/Languages/de.xml
@@ -190,12 +190,16 @@
   <string name="LocalMedia" Original="Local Media">Lokale Medien</string>
   <string name="AdultSeries" Original="Adult Series">Serie für Erwachsene</string>
   <string name="KidsSeries" Original="Kids Series">Kinderserie</string>
+  <string name="DeleteThumbnailsHeading" Original="Delete Thumbnails">Lösche Vorschaubilder</string>
+  <string name="RateDialog" Original="Rate Dialog">Bewertungsdialog</string>
+  <string name="PinCodeDialog" Original="Pin Code Dialog">PIN-Dialog</string>
   <string name="Aired" Original="Aired">Ausgestrahlt</string>
   <string name="AiredStatusContinuing" Original="Continuing">Wird fortgesetzt</string>
   <string name="AiredStatusEnded" Original="Ended">Beendet</string>
   <string name="Airs" Original="Airs">Ausstrahlungen</string>
   <string name="AirsDay" Original="Airs Day">Tag der Ausstrahlung</string>
   <string name="AirsTime" Original="Airs Time">Uhrzeit der Ausstrahlung</string>
+  <string name="Cast" Original="Cast">Besetzung</string>
   <string name="Certification" Original="Certification">Freigegeben ab</string>
   <string name="Director" Original="Director">Regisseur</string>
   <string name="Directors" Original="Directors">Regisseure</string>
@@ -265,18 +269,28 @@
   <string name="CFS_Local_Series" Original="Local Series:">Lokale Serien:</string>
   <string name="AvailableMedia" Original="Available Media">Verfügbare Medien</string>
   <string name="Votes" Original="votes">Abstimmungen</string>
+  <string name="SummaryNotAvailable" Original="No summary is currently available.">Keine Beschreibung verfügbar</string>
   <string name="Timeout" Original="Timeout">Zeitüberschreitung</string>
+  <string name="ShowAllEpisodes" Original="Show all Episodes">Alle Episoden anzeigen</string>
   <string name="Calendar" Original="Calendar">Kalender</string>
   <string name="Recommendations" Original="Recommendations">Vorschläge</string>
   <string name="Trending" Original="Trending">Populär</string>
   <string name="WatchList" Original="WatchList">Beobachtungsliste</string>
   <string name="Shouts" Original="Shouts">Shouts</string>
+  <string name="MainMenu" Original="Main Menu">Hauptmenü</string>
+  <string name="RelatedSeries" Original="RelatedSeries">Ähnliche Serien</string>
+  <string name="SearchTorrent" Original="Torrent Search">Torrent-Suche</string>
+  <string name="SearchNZB" Original="NZB Search">NZB-Suche</string>
   <string name="InsertDiskMessage1" Original="The media for the episode you have selected">Das Medium für die ausgewählte Episode</string>
   <string name="InsertDiskMessage2" Original="is currently not available.">ist momentan nicht verfügbar.</string>
   <string name="InsertDiskMessage3" Original="Please insert or connect media">Bitte Medium mit der folgenden Bezeichnung</string>
   <string name="InsertDiskMessage4" Original="labeled: {0}">einlegen oder verbinden: {0}</string>
   <string name="OK" Original="OK">OK</string>
   <string name="Cancel" Original="Cancel">Abbrechen</string>
+  <string name="Ignore" Original="Ignore">Ignorieren</string>
   <string name="Update" Original="Update">Aktualisieren</string>
   <string name="Warning" Original="Warning">Warnung</string>
+  <string name="Filters" Original="Filters">Filter</string>
+  <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Ungesehene Episoden</string>
+  <string name="AllEpisodes" Original="All Episodes">Alle Episoden</string>
 </resources>
