--- a/MP-TVSeries/Resources/Languages/sv.xml
+++ b/MP-TVSeries/Resources/Languages/sv.xml
@@ -232,21 +232,84 @@
   <string name="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Felsök och försök igen</string>
   <string name="Playlist" Original="Playlist">Spel-lista</string>
   <string name="LastOnlineUpdate" Original="LastOnlineUpdate">Senaste online-uppdatering</string>
+  <string name="ResetIgnoredDownloadedFiles" Original="Reset Ignored Downloaded Files">Nollställ ignorerade nerladdade filer</string>
+  <string name="GetSubtitlesFrom" Original="Get subtitles from?">Hämta undertexter från?</string>
+  <string name="EnabledSubtitleSites" Original="Enabled subtitle sites:">Aktiverade webbplatser för undertexter</string>
+  <string name="PlayNow" Original="Play Now">Spela nu</string>
+  <string name="NoSubtitleDownload" Original="No Subtitle Download">Ladda inte ner undertexter </string>
+  <string name="DeleteSubtitles" Original="Delete Subtitles">Ta bort undertexter</string>
+  <string name="EpisodeFilenameEmpty" Original="Episode Filename is Empty in Database">Avsnittets filnamn saknas i databasen</string>
+  <string name="UnableToDeleteSubtitleFile" Original="Unable to Delete Subtitle File: {0}">Kan inte ta bort filen {0} med undertexter</string>
+  <string name="PathNotAvailable" Original="Path is not available: {0}">Sökvägen  {0} är inte tillgänglig</string>
+  <string name="UnableToDeleteSubtitles" Original="Unable to Delete Subtitles">Kan inte ta bort undertexter</string>
   <string name="ErrorClear" Original="Error">Fel</string>
+  <string name="UnableToRetrieveSubtitles" Original="Unable to retrieve subtitles">Kan inte hämta undertexter</string>
+  <string name="NoSubtitlesFoundOrRetrieved" Original="No subtitles found or retrieved">Inga undertexter hittades eller hämtades</string>
+  <string name="UnableToDelete" Original="Unable to Delete">Kan inte ta bort</string>
+  <string name="UnableToDeleteFile" Original="Unable to Delete File: {0}">Kan inte ta bort filen: {0}</string>
+  <string name="PlaySomething" Original="Play...">Spela...</string>
+  <string name="PlayError" Original="Play error">Fel vid uppspelning</string>
+  <string name="RandomEpisode" Original="random episode">Slumpa avsnitt</string>
+  <string name="FirstUnwatchedEpisode" Original="first unwatched episode">första osedda avsnitt</string>
+  <string name="RandomUnwatchedEpisode" Original="random unwatched episode">slumpa osedda avsnitt</string>
+  <string name="LatestEpisode" Original="latest episode">senaste avsnitt</string>
+  <string name="UnableToFindAny" Original="Unable to find any {0}">Kan inte hitta några {0}</string>
+  <string name="UnableToFindAnyEpisode" Original="Unable to find any episode">Kan inte hitta något avsnitt</string>
   <string name="SortBy" Original="Sort By">Sortera efter</string>
+  <string name="DVDOrder" Original="DVD Order">Ordnade efter DVD</string>
+  <string name="AiredOrder" Original="Aired Order">Ordnade efter sändningsdatum</string>
+  <string name="AbsoluteOrder" Original="Absolute Order">Ordnade efter avsnitt</string>
   <string name="Title" Original="Title">Titel</string>
+  <string name="ChangeOnlineMatchOrder" Original="Change Online Matching Method">Byt online matchningsmetod</string>
+  <string name="InsertDiskMessageLine1" Original="The media for the episode you have selected">Mediat för det avsnitt du har valt</string>
+  <string name="InsertDiskMessageLine2" Original="is currently not available.">är inte tillgängligt just nu</string>
+  <string name="InsertDiskMessageLine3" Original="Please insert or connect media">Sätt i  eller anslut till media</string>
+  <string name="InsertDiskMessageLine4" Original="labeled: {0}">märkt: {0}</string>
+  <string name="ShowHiddenItems" Original="Show Hidden Items">Visa dolda</string>
+  <string name="UnHide" Original="UnHide">Visa dolda</string>
+  <string name="CFS_Skip" Original="Skip">Hoppa över</string>
+  <string name="CFS_No_Match_Manual_Search" Original="No Match Found, Manual Search...">Ingen match hittades, manuell sökning</string>
+  <string name="CFS_Local_Series" Original="Local Series:">Lokala serier</string>
+  <string name="AvailableMedia" Original="Available Media">Tillgänglig media</string>
   <string name="Votes" Original="votes">röster</string>
+  <string name="LayoutCoveflow" Original="Coveflow">Coverflow</string>
+  <string name="ResumeEpisode" Original="Resume episode from last time?">Återuppta avsnittet från senaste gången?</string>
+  <string name="SummaryNotAvailable" Original="No summary is currently available.">Ingen sammanfattning finns tillgänglig just nu</string>
   <string name="Timeout" Original="Timeout">Timeout</string>
+  <string name="NoActors" Original="There are no Actors for this series.">Det finns inga skådespelare för den här serien</string>
+  <string name="GettingActors" Original="Getting Actors from Online">Hämtar skådespelare online</string>
   <string name="ShowAllEpisodes" Original="Show all Episodes">Visa alla avsnitt</string>
+  <string name="DownloadAllEpisodeInfo" Original="Download All Episode Info">Ladda ner all avsnittsinformation</string>
   <string name="Calendar" Original="Calendar">Kalender</string>
   <string name="Recommendations" Original="Recommendations">Rekommendationer</string>
   <string name="Trending" Original="Trending">Populärt</string>
   <string name="WatchList" Original="WatchList">Watch List</string>
   <string name="Shouts" Original="Shouts">Shouts</string>
+  <string name="MainMenu" Original="Main Menu">Startmeny</string>
+  <string name="AddToWatchList" Original="Add {0} to Watchlist">Lägg till {0} i Watchlistan</string>
+  <string name="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">Du kan inte göra det här utan att vara inloggad. ⏎ Vill du registrera dig eller logga in på trakt.tv nu?⏎ </string>
+  <string name="RelatedSeries" Original="RelatedSeries">Relaterade serier</string>
+  <string name="SearchTorrent" Original="Torrent Search">Torrentsökning</string>
+  <string name="SearchNZB" Original="NZB Search">NZB-sökning</string>
+  <string name="SearchActorInMovies" Original="Search for Actor in Movies">Sök efter skådespelare i filmer</string>
+  <string name="AddToCustomList" Original="Add {0} to Custom List...">Lägg till {0} i den egna listan</string>
   <string name="insertDisk" Original="Please insert Disk">Sätt i skiva</string>
+  <string name="InsertDiskMessage1" Original="The media for the episode you have selected">Mediat för det avsnitt du har valt</string>
+  <string name="InsertDiskMessage2" Original="is currently not available.">är inte tillgängligt just nu</string>
+  <string name="InsertDiskMessage3" Original="Please insert or connect media">Sätt i  eller anslut till media</string>
+  <string name="InsertDiskMessage4" Original="labeled: {0}">märkt: {0}</string>
   <string name="OK" Original="OK">OK</string>
   <string name="Cancel" Original="Cancel">Avbryt</string>
+  <string name="Ignore" Original="Ignore">Ignorera</string>
+  <string name="CycleSeriesThumb" Original="Cycle Series Panel">Rotera mellan seriepaneler</string>
   <string name="Update" Original="Update">Uppdatera</string>
+  <string name="ViewTagExistsMessage" Original="The view '{0}' already exists">Vyn \'{0}\' finns redan</string>
+  <string name="LayoutListThumbs" Original="List Panels">Lista paneler</string>
+  <string name="LayoutCoverflow" Original="Coverflow">Coverflow</string>
   <string name="Warning" Original="Warning">Varning</string>
+  <string name="PlaybackOutOfOrderLine1" Original="The next unwatched episode is:">Du har ännu inte tittat på eller samlat</string>
+  <string name="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">Vill du fortsätta?</string>
+  <string name="Filters" Original="Filters">Filter</string>
+  <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Osedda avsnitt</string>
   <string name="AllEpisodes" Original="All Episodes">Alla avsnitt</string>
 </resources>
